[gd_scene load_steps=4 format=3 uid="uid://bxesay8nfgo81"]

[ext_resource type="Script" path="res://Scripts/recruit_card_collector_script.gd" id="1_sxhyk"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="2_8t4c0"]
[ext_resource type="FontFile" uid="uid://b6qn4wet6lij7" path="res://Resources/Fonts/dogica/OTF/dogicabold.otf" id="3_e3i1o"]

[node name="RecruitCardCollectorUi" type="Node2D"]
z_index = -1
script = ExtResource("1_sxhyk")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1745.0
offset_bottom = 757.0

[node name="CardCollector" type="CanvasLayer" parent="BG"]
unique_name_in_owner = true
layer = 2

[node name="Placer" type="Node2D" parent="BG"]
unique_name_in_owner = true
position = Vector2(50, 50)

[node name="SelectedRoomName" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme = ExtResource("2_8t4c0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_e3i1o")
theme_override_font_sizes/font_size = 32
text = "Default_name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseBuildWindow" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 1690.0
offset_top = 19.0
offset_right = 1730.0
offset_bottom = 70.0
theme = ExtResource("2_8t4c0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 30
text = "X"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CloseBuildWindow" to="." method="_on_close_build_window_pressed"]
